configure sandbox for agnostic runtime
